Opened 14 years ago

Closed 14 years ago

#2053 closed defect (fixed)

ffplay's frame step not accurate

Reported by: Clément Bœsch Owned by: Marton Balint
Priority: normal Component: ffplay
Version: git-master Keywords: framestep
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Frame stepping in ffplay doesn't work that well. It seems there is some kind of race. Start playing a relatively big video (with the drawtext filter as shown below to print the frame id), and switch to step-by-step mode ('s').

☭ ./ffplay ~/samples/big_buck_bunny_1080p_h264.mov -vf drawtext=text=%{n}:expansion=normal:fontcolor=yellow:fontsize=50:fontfile=LiberationMono                                                    
ffplay version N-48100-g3f72dbe Copyright (c) 2003-2012 the FFmpeg developers
  built on Dec 22 2012 12:54:34 with gcc 4.7.2 (GCC)
  configuration: --enable-gpl --enable-fontconfig --enable-libfreetype --enable-libmp3lame --enable-libvorbis --enable-libxvid --enable-libx264 --enable-libvpx --enable-libtheora --enable-x11grab --enable-libopenjpeg --enable-libass --enable-libmodplug --enable-libv4l2 --cc=colorgcc --samples=/home/ubitux/fate-samples --prefix=/tmp/ffinstall --enable-runtime-cpudetect --enable-libcelt
  libavutil      52. 12.100 / 52. 12.100
  libavcodec     54. 81.100 / 54. 81.100
  libavformat    54. 49.102 / 54. 49.102
  libavdevice    54.  3.102 / 54.  3.102
  libavfilter     3. 29.100 /  3. 29.100
  libswscale      2.  1.103 /  2.  1.103
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from '/home/ubitux/samples/big_buck_bunny_1080p_h264.mov':
  Metadata:
    major_brand     : qt  
    minor_version   : 537199360
    compatible_brands: qt  
    creation_time   : 2008-05-27 18:40:35
    timecode        : 00:00:00:00
  Duration: 00:09:56.46, start: 0.000000, bitrate: 9725 kb/s
    Stream #0:0(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p, 1920x1080, 9282 kb/s, 24 fps, 24 tbr, 2400 tbn, 4800 tbc
    Metadata:
      creation_time   : 2008-05-27 18:40:35
      handler_name    : Apple Alias Data Handler
    Stream #0:1(eng): Data: none (tmcd / 0x64636D74)
    Metadata:
      creation_time   : 2008-05-27 18:40:35
      handler_name    : Apple Alias Data Handler
      timecode        : 00:00:00:00
    Stream #0:2(eng): Audio: aac (mp4a / 0x6134706D), 48000 Hz, 5.1, fltp, 437 kb/s
    Metadata:
      creation_time   : 2008-05-27 18:40:35
      handler_name    : Apple Alias Data Handler
Frame changed from size:0x0 to size:1920x108001KB sq=    0B f=0/0   

Now look at the counter; sometimes (1 out of 10-20 frames, not reproducible with the same frame id between different runs) the frame doesn't increment (and need one or two more key hits), or increment too quickly (often skip 1 frame).

Change History (3)

comment:1 by Carl Eugen Hoyos, 14 years ago

Reproduced by developer: set
Status: newopen

comment:2 by Marton Balint, 14 years ago

Owner: set to Marton Balint

comment:3 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed

Fixed by Marton.

Note: See TracTickets for help on using tickets.